--- a/config/config.json
+++ b/config/config.json
@@ -1,24 +1,24 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
-    "database": "todolist3",
-    "host": "localhost",
+    "username": "dt9oahk9yooa8avu",
+    "password": "xczhmpf6az423vcg",
+    "database": "faw7ourbmg3tek65",
+    "host": "h2cwrn74535xdazj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "port": 3306,
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "dt9oahk9yooa8avu",
+    "password": "xczhmpf6az423vcg",
+    "database": "faw7ourbmg3tek65",
+    "host": "h2cwrn74535xdazj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "dt9oahk9yooa8avu",
+    "password": "xczhmpf6az423vcg",
+    "database": "faw7ourbmg3tek65",
+    "host": "h2cwrn74535xdazj.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
